# mkdocs-madlibs

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-test.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-form.yml  feature-request-form.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml  test.yml
docs/: customization.md  index.md  requirements.txt  support.md  usage.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
mkdocs_madlibs/: __init__.py  _fence.py
tests/integration/: index.html  mkdocs.yml  test_mkdocs_madlibs.py
tests/integration/docs/: index.md
tests/unit/: test_fence.py
